--- a/src/coms/coms_ui/templates/log_in.html
+++ b/src/coms/coms_ui/templates/log_in.html
@@ -38,7 +38,7 @@
 
   </head>
   <body>
-    <div class="container">
+
 
       <div class="logo-container">
         <img src="{{url_for('static',filename='logo-blue-white-onlycrown.png')}}" />
@@ -48,7 +48,7 @@
 
 
       <form class="form-container" method="post">
-        <input type="hidden" id="formId" name="formName" value="log-in">
+
 
         <h2>Welcome to the MR Virtual Scanner.</h2>
         <br>
@@ -76,28 +76,6 @@
               <br>
             </div>
 
-            <!--Standard About on mouse-over-->
-            <div id="standard-about" class="jumbotron about-container">
-              <p>Standard MR console funcitonalities:</p>
-              <ul>
-                <li>Subject registration</li>
-                <li>Basic sequence acquisition</li>
-                <li>Quantitative analysis</li>
-              </ul>
-              <br>
-            </div>
-
-            <!--Advanced mode About on mouse-over-->
-            <div id="advanced-about" class="jumbotron about-container">
-              <p>In-depth understanding of MR blocks:</p>
-              <ul>
-                <li>Pulse sequence implementation</li>
-                <li>Phantom/Subject models</li>
-                <li>Transmission and reception</li>
-                <li>Recontruction and analysis</li>
-              </ul>
-              <br>
-            </div>
           </div>
 
 
@@ -128,6 +106,31 @@
             </div>
           </div>
 
+          <div class="vertical-line"></div>
+
+          <div class="col">
+            <!--Standard About on mouse-over-->
+            <div id="standard-about" class="jumbotron about-container">
+              <p>Standard MR console funcitonalities:</p>
+              <ul>
+                <li>Subject registration</li>
+                <li>Basic sequence acquisition</li>
+                <li>Quantitative analysis</li>
+              </ul>
+              <br>
+            </div>
+            <!--Advanced mode About on mouse-over-->
+            <div id="advanced-about" class="jumbotron about-container">
+              <p>In-depth understanding of MR blocks:</p>
+              <ul>
+                <li>Pulse sequence implementation</li>
+                <li>Phantom/Subject models</li>
+                <li>Transmission and reception</li>
+                <li>Recontruction and analysis</li>
+              </ul>
+            </div>
+          </div>
+
         </div>
 
         <br>
@@ -137,7 +140,7 @@
 
       </form>
 
-    </div>
+
 
 
 
