--- a/src/coms/coms_ui/static/analyze_style.css
+++ b/src/coms/coms_ui/static/analyze_style.css
@@ -1,7 +1,7 @@
 /*JUMBOTRON*/
 #mainpanel{
   height: 45vh;
-  width: 84vw;
+  min-width: 84vw;
   /* TODO: Set min width  */
 }
 /*CONTAINERS*/
@@ -59,8 +59,11 @@ label{
 .tag-label-small{
   width: 5%
 }
+.tag-label-med{
+  width: 30%
+}
 .tag-label-large{
-  width:20%;
+  width:50%;
 }
 .input-label{
   padding-left: 5%;
@@ -69,8 +72,10 @@ label{
   padding-left: 10%;
 }
 #skip-a-line{
-  width: 1rem;
-
+  min-width: 1.5rem;
+}
+.largeinput-label{
+  width: 80%;
 }
 /*INPUT*/
 .fileInput{
@@ -78,9 +83,17 @@ label{
   height: 24px;
   border-color:black;
   border-width: 2px;
+  margin-left: 15px;
 }
 #file-select{
   display: none;
+}
+.largeinput{
+  width: 100%;
+}
+#TI-input{
+  background-color: #bfbfbf;
+  
 }
 /*BUTTONS*/
 .btn-align-right{
@@ -96,3 +109,13 @@ label{
 }
 
 /*COLS AND ROWS*/
+#map-gen-col{
+  min-width:60%;
+}
+#ROI-ana-col{
+  width:25%;
+}
+/*FORMS*/
+.map-gen-Form{
+  margin-left: 15px;
+}
