--- a/src/coms/coms_ui/static/log_in_style.css
+++ b/src/coms/coms_ui/static/log_in_style.css
@@ -1,33 +1,34 @@
 
 body{
   background-color:#002F73;
-
   color: white;
   font-family:  'Montserrat', sans-serif;
   line-height: 1.2;
 }
 .logo-container{
   position: absolute;
-  width:80%;
-  bottom:60%;
+  width:100%;
+  bottom:2%;
   text-align: center;
+}
+.form-container{
+  position: absolute;
+  bottom:10%;
+  width:100%;
+  height:50%;
+  text-align: center;
+
 }
 img{
 
   height:40%;
 }
-.form-container{
-  position: absolute;
-  bottom:0;
-  width:80%;
-  height:50%;
-  text-align: center;
 
-}
 coltype1{
   float: right;
 }
 h1{
+  padding: none;
   background-color: #002F73;
   text-align: center;
   font-family: 'Cinzel', serif;
@@ -55,9 +56,14 @@ h3{
   font-weight:500;
 }
 .about-container{
-  display: none;
   text-align: left;
-  margin-left: 20%;
-
+  margin-left: 10%;
   background-color: #002F73;
+}
+.row{
+  margin-right:0px;
+  margin-left:0px;
+}
+#advanced-about{
+  display: none;
 }
