--- a/src/coms/coms_ui/static/register_style.css
+++ b/src/coms/coms_ui/static/register_style.css
@@ -1,3 +1,6 @@
+/*Register styling*/
+
+
 /*CONTAINERS*/
 #mainpanel{
   min-height: 90vh;
@@ -13,6 +16,21 @@
   text-align: center;
   vertical-align: middle;
 }
+.success-container{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 30vw;
+  height: 10vh;
+  text-align: center;
+}
+.success-container h1{
+  display:none;
+  text-align: center;
+}
+#success-sentence{
+  display: none;
+}
 
 
 .first-row-header{
@@ -25,25 +43,12 @@
   height: auto;
 }
 
-
-
-
-
 .mediuminput{
   width: 100px;
   height: 24px;
   border-color:black;
   border-width: 2px;
 }
-
-
-
-
-.coltype3{
-  text-align: center;
-
-}
-
 
 .list-group-item{
   border-color:#2f2f91;
@@ -90,4 +95,8 @@ label{
 }
 img{
   width: 100%;
+}
+#regparameters{
+  margin-left: 15px;
+  margin-right: 15px;
 }
