--- a/src/coms/coms_ui/static/analyze_style.css
+++ b/src/coms/coms_ui/static/analyze_style.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
+  background-color: black;
 }
 #enclosingjumbo .images-container{
   position: absolute;
@@ -18,18 +19,25 @@
   bottom: 45vh;
 }
 .analysis-container{
-  border: 5px solid #003865;
+  /*border: 5px solid #003865;*/
   height: 100%;
   width: 48vh;
   min-width: 48vh;
   text-align: center;
 }
-.analysis-container p{
+.vertical-line {
+  border-left: 2px solid white;
+
+  min-height: 100%;
+  left: 50%;
+
+}
+/*.analysis-container p{
   vertical-align: middle;
   line-height: 48vh;
   font-weight: bold;
   color: #003865;
-}
+}*/
 .workspace-container{
   width: 16vw;
   border: 2px solid #003865;
@@ -93,7 +101,7 @@ label{
 }
 #TI-input{
   background-color: #bfbfbf;
-  
+
 }
 /*BUTTONS*/
 .btn-align-right{
