debug needed for coms_server_flask (image display)

--- a/src/coms/coms_ui/static/acquire_style.css
+++ b/src/coms/coms_ui/static/acquire_style.css
@@ -29,6 +29,9 @@ h4 bold{
   min-width: 58vh;
   text-align: center;
 }
+.acquire-container img{
+  width: 100%;
+}
 .vertical-line {
   border-left: 2px solid white;
 
