--- a/src/coms/coms_ui/templates/analyze.html
+++ b/src/coms/coms_ui/templates/analyze.html
@@ -1,16 +1,20 @@
 <!--"""-->
 <!--This script corresponds to the GUI content for the Analysis tab of the virtual scanner-->
 <!--Parameters-->
-    <!-- TODO: change this -->
-    <!--Requires input from the user regarding subject data and Procedure-->
-    <!--ID, Name, Age, Date of Birth, Gender, Weight, height, orientation within the scanner and anatomy imaged -->
+
+    <!--Requires input from the user regarding sequence parameters and map parameters-->
+
 
 <!--Returns-->
-    <!--payload with the form inputs after pressing the submission button-->
+    <!--Original sample data or data from previous simulation-->
+    <!--T1/T2 maps-->
+    <!--ROI analysis (curve fitting)-->
+
+
 
 
 <!--Author: Marina Manso-->
-<!--Date: 04/02/2019-->
+<!--Date: 04/29/2019-->
 <!--Version 0.0-->
 <!--Copyright of the Board of Trustees of  Columbia University in the City of New York-->
 <!--"""-->
@@ -40,6 +44,53 @@
     <link href= "http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="{{url_for('static',filename='analyze_func.js')}}"></script>
 
+    <!--JS to capture template variables-->
+    <script type="text/javascript">
+      //First step: load sample original data:
+      if ('{{ load_success }}'){
+        {% autoescape false %}
+          console.log('load success')
+          var payload1_dict = {{ payload1 }}
+
+          $(document).ready(function(){
+
+            autoFillForm(payload1_dict);
+
+            //displayImages(payload1_dict['data-path']);
+            var im_array = payload1_dict['data-path']
+            $("#original-data-carousel").show();
+
+
+            var i;
+            for (i = 0; i < im_array.length; i++) {
+              if (i == 0) {
+                $('#original-data-carousel .carousel-inner').append('<div class="carousel-item active"><img class="d-block w-100" src="'+im_array[i]+'"></div>');
+              }
+              else{
+                $('#original-data-carousel .carousel-inner').append('<div class="carousel-item"><img class="d-block w-100" src="'+im_array[i]+'"></div>');
+              }
+            }
+          });
+
+
+        {% endautoescape %}
+      }
+
+      //Second step: load the generated map file
+      if ('{{ map_success }}'){
+        {% autoescape false %}
+
+          var payload1_dict = {{ payload1 }};
+          var payload2_dict = {{ payload2 }}
+          $(document).ready(function(){
+            autoFillForm2(payload1_dict,payload2_dict);
+
+            $('#map-container').append('<img class="d-block w-100" src="'+payload2_dict['map_path']+'"/>');
+          });
+        {% endautoescape %}
+      }
+
+    </script>
 
   </head>
   <body>
@@ -52,18 +103,33 @@
       <div class="images-container">
         <!--Original data-->
         <div id="data-container" class="container analysis-container">
-          <!--<p>ORIGINAL DATA</p>-->
+        <div id="original-data-carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
 
           <div class="vertical-line"></div>
 
         <!--T1/T2 map-->
         <div id="map-container" class="container analysis-container">
-          <!--<p>T1/T2 MAP</p>-->
+
+
+
+
         </div>
 
             <div class="vertical-line"></div>
-            
+
         <!--ROI analysis results-->
         <div id="roiresults-container" class="container analysis-container">
           <!--<p>ROI ANALYSIS RESULTS</p>-->
@@ -98,24 +164,30 @@
           </nav>
 
           <!--Load a DICOM file-->
-          <label id="first-row-item" for="fileInput">
-            <input id="file-input-display" class="fileInput" type="text" name="fileInput" placeholder="Choose a DICOM file..."/>
-            <input id="load-btn" class="btn btn-primary" type="button" value="Load" />
+          <form id="original-data-form" method='post' action='/receiver'> <!--First form-->
+            <input type="hidden" id="formId" name="formName" value="ana">
+            <input type="hidden" id="selected-option" name="original-data-opt">
+            <label id="first-row-item" for="fileInput">
 
-            <!-- Hidden file input to trigger file choice dialog to open-->
-            <!--Set accept=".dicom" to filter the files and only allow dicom selection-->
-            <!--<input id="file-select" type="file" accept=".jpg">-->
+              <input id="file-input-display" class="fileInput" type="text" name="fileInput" placeholder="Choose a DICOM file..."/>
+              <input id="load-btn" class="btn btn-primary" type="button" value="Load" />
 
-            <!--Save and reset buttons-->
-            <input class="btn btn-primary btn-align-right" type="button" value="Save"/>
-            <input class="btn btn-primary btn-align-right" type="button" value="Reset"/>
-          </label>
+              <!-- Hidden file input to trigger file choice dialog to open-->
+              <!--Set accept=".dicom" to filter the files and only allow dicom selection-->
+              <!--<input id="file-select" type="file" accept=".jpg">-->
+
+              <!--Save and reset buttons-->
+              <input class="btn btn-primary btn-align-right" type="button" value="Save"/>
+              <input class="btn btn-primary btn-align-right" type="button" value="Reset"/>
+            </label>
+          </form>
 
           <!--Forms-->
           <div class="row">
             <div id="map-gen-col" class="col">
-              <form class="map-gen-Form" >
+              <form class="map-gen-Form" method='post' action='/receiver'>
                 <input type="hidden" id="formId" name="formName" value="ana">
+                <input type="hidden" name="map-form" value="map">
 
                 <!--Sequece selection: currently only SE and IRSE-->
                 <label>Sequence</label>
@@ -136,7 +208,7 @@
                     <!--Repetition Time (TR): Unique value -->
                     <label class="tag-label-small">TR</label>
                     <label class="input-label">
-                      <input class="smallinput" type="number" name="TR">
+                      <input id="TR" class="smallinput" type="number" name="TR">
                     </label>
                     <label>ms</label>
 
@@ -145,7 +217,7 @@
                     <!--Echo Time (TE): same number as number of images, if T2 map -->
                     <label class="tag-label-small">TE</label>
                     <label class="input-label largeinput-label">
-                      <input class="largeinput" type="text" name="TE"  />
+                      <input id="TE" class="largeinput" type="text" name="TE"  />
                     </label>
                     <label>ms</label>
 
@@ -166,7 +238,7 @@
 
                     <label class="input-label largeinput-label ">
 
-                      <select class="selector" name="model-eq">
+                      <select id="model-eq" class="selector" name="model-eq">
                         <option value="SE-eq">a(1-e^{-(y/b)})e^{-(x/c)}+d</option>
 
                         <option value="IRSE-eq">a(1-2e^{-(x/b)}+e^{-(y/b)})</option>
@@ -178,7 +250,7 @@
 
                 <!--Button for map generation-->
                 <div class="row">
-                  <input  class="btn btn-primary analysis-btn" type="button" value="Generate Map"/>
+                  <input  class="btn btn-primary analysis-btn" type="submit" value="Generate Map"/>
                 </div>
 
 
@@ -186,7 +258,8 @@
             </div>
 
             <div id="ROI-ana-col" class="col">
-              <form class="ROI-ana-Form">
+              <form id="ROI-ana-Form" method="post" action="/receiver">
+                <input type="hidden" name="roi-form" value="roi">
                 <input type="hidden" id="formId" name="formName" value="ana">
                   <label ><p id="skip-a-line"></p></label>
                   <h2>ROI Analysis</h2>
@@ -196,7 +269,7 @@
                   <!--Map type: Choose between T1 or T2 map-->
                   <label class="tag-label-med">Map Type</label>
                   <label class="input-label">
-                    <select class="selector" name="map-type">
+                    <select id="map-type" class="selector" name="map-type">
                       <option value="t1">T1</option>
                       <option value="t2">T2</option>
                     </select>
@@ -207,21 +280,19 @@
                   <!--Map size-->
                   <label class="tag-label-med">Map Size</label>
                   <label class="input-label">
-                    <input type="number" class="smallinput" name="map-size">
+                    <input id="map-size" type="number" class="smallinput" name="map-size">
                   </label>
 
                     <div class="w-100"></div>
 
-                  <!--Intensity range: Everything inside intensity range will be set to 1, and 0 otherwise. -->
-                  <label class="tag-label-med">Intensity Range</label>
-                  <label class="input-label ">min:
-                    <input class="smallinput" type="number" name="intensity-min">
+                  <!--FOV -->
+                  <label class="tag-label-med">Field of View</label>
+                  <label class="input-label ">
+                    <input id="FOV" class="smallinput" type="number" name="intensity-min">
                   </label>
-                  <label class="input-label " >max:
-                    <input class="smallinput" type="number" name="intensity-max">
-                  </label>
+                  <label>mm</label>
 
-                  <input id="roi-analysis-button" class="btn btn-primary analysis-btn" type="button" value="Detect Spheres"/>
+                  <input id="roi-analysis-button" class="btn btn-primary analysis-btn" type="button" value="Detect Spheres" disabled/>
 
 
 
@@ -239,10 +310,17 @@
 
 
     </div><!--enclosingjumbo-->
+
     <div id="file-select-dialog" class="dialog" title="Select a folder:">
       <ul class="menu no-bullet">
-        <li><a class="menu-item" href = "#">Simulation Results</a></li>
-        <li ><a class="menu-item" href = "#">Analyze Sample Data</a></li>
+        <li class="ui-state-disabled"><div><a class="menu-item" href = "#">Simulation Results</a></div></li>
+        <li ><div>Analyze Sample Data</div>
+          <ul>
+            <li><a class="menu-item" href = "#">T1</a></li>
+            <li><a class="menu-item" href = "#">T2</a></li>
+          </ul>
+        </li>
+
 
       </ul>
     </div>
